New Debian revision 1.0-2.
This revision removes the ll2utm and utm2ll manpages from the source
package and no longer installs the binaries for ll2utm and utm2ll.

This is in response to piuparts complaints that these binaries conflict
with binaries in the drawmap package, and these binaries are not
critical to the use of direwolf. See bug #768223.

--- a/debian/patches/makefile_install.patch
+++ b/debian/patches/makefile_install.patch
@@ -35,8 +35,8 @@ Last-Update: 2014-09-08
 +	install decode_aprs debian/direwolf/usr/bin
 +	install text2tt debian/direwolf/usr/bin
 +	install tt2text debian/direwolf/usr/bin
-+	install ll2utm debian/direwolf/usr/bin
-+	install utm2ll debian/direwolf/usr/bin
++	#install ll2utm debian/direwolf/usr/bin
++	#install utm2ll debian/direwolf/usr/bin
 +	install aclients debian/direwolf/usr/bin
 +	install -D --mode=644 tocalls.txt debian/direwolf-docs/usr/share/direwolf/tocalls.txt
 +	install -D --mode=644 symbols-new.txt debian/direwolf-docs/usr/share/direwolf/symbols-new.txt
