--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-hamradio/direwolf.git
 Homepage: http://home.comcast.net/~wb2osz/site/
 
 Package: direwolf
-Architecture: linux-any
+Architecture: alpha amd64 arm64 armel armhf i386 mipsel ppc64el sh4 x32
 Depends: ${shlibs:Depends}, ${misc:Depends}, direwolf-docs
 Description: Soundcard TNC for APRS
  Dire Wolf is a software "soundcard" modem/TNC and APRS encoder/decoder. It can
