--- a/direwolf.conf
+++ b/direwolf.conf
@@ -24,7 +24,7 @@
 #	(3)	DIGIPEATER  -  configure digipeating rules.
 #
 #			Look for lines starting with DIGIPEATER.
-#			Most people will probably use the first example.
+#			Most people will probably use the given example.
 #			Just remove the "#" from the start of the line
 #			to enable it.
 #
@@ -115,6 +115,7 @@
 # ADEVICE - plughw:1,0
 # ADEVICE UDP:7355 default
 
+
 #
 # This is the sound card audio sample rate.
 # The default is 44100.  Other standard values are 22050 or 11025.
@@ -165,11 +166,13 @@ CHANNEL 0
 
 MYCALL NOCALL
 
+
+
 #
 # VHF FM operation normally uses 1200 baud data with AFSK tones of 1200 and 2200 Hz.
 # 
 
-MODEM 1200 1200 2200 
+MODEM 1200 1200 2200
 
 #
 # 200 Hz shift is normally used for 300 baud HF SSB operation.
@@ -254,7 +257,7 @@ CHANNEL 1
 
 MYCALL NOCALL
 
-MODEM 1200 1200 2200 
+MODEM 1200 1200 2200
 
 #
 # For this example, we use the same serial port for both
@@ -277,7 +280,7 @@ TXTAIL 10
 #
 # Dire Wolf acts as a virtual TNC and can communicate with
 # two different protocols:
-#	- the “AGW TCPIP Socket Interface” - default port 8000
+#	- the "AGW TCPIP Socket Interface" - default port 8000
 #	- KISS TNC via serial port
 #	- KISS protocol over TCP socket - default port 8001
 #
@@ -321,15 +324,12 @@ KISSPORT 8001
 
 
 #
-# Version 0.6 adds a new feature where it is sometimes possible
-# to recover frames with a bad FCS.  Several levels of effort
-# are possible.  
+# It is sometimes possible to recover frames with a bad FCS.  
 #
-#	0 [NONE] - Don't try to repair.
-#	1 [SINGLE] - Attempt to fix single bit error.  (default)
-#	2 [DOUBLE] - Also attempt to fix two adjacent bits.
-#	3 [TRIPLE] - Also attempt to fix three adjacent bits.
-#	4 [TWO_SEP] - Also attempt to fix two non-adjacent (separated) bits.
+#	0  [NONE] - Don't try to repair.
+#	1  [SINGLE] - Attempt to fix single bit error.  (default)
+#	2  [DOUBLE] - Also attempt to fix two adjacent bits.
+#	... see User Guide for more values and in-depth discussion.
 #
 
 FIX_BITS 1
@@ -358,9 +358,15 @@ FIX_BITS 1
 # The others are kept local.
 #
 
+#PBEACON delay=00:10 every=0:30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA" via=WIDE1-1,WIDE2-1 
+
 #PBEACON delay=00:15 every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA" via=WIDE1-1,WIDE2-1 
 #PBEACON delay=10:15 every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA"  
 #PBEACON delay=20:15 every=30 overlay=S symbol="digi" lat=42^37.14N long=071^20.83W power=50 height=20 gain=4 comment="Chelmsford MA"  
+
+# With UTM coordinates instead of latitude and longitude.
+
+#PBEACON delay=00:15 every=10 overlay=S symbol="digi" zone=19T easting=306130 northing=4726010 
 
 #
 # Modify this for your particular situation before removing 
@@ -375,97 +381,15 @@ FIX_BITS 1
 #############################################################
 
 #
-# Digipeating is activated with commands of the form:
-#
-#	DIGIPEAT from-chan to-chan aliases wide [ preemptive ]
-#
-# where,
-#
-#	from-chan	is the channel where the packet is received.
-#
-#	to-chan		is the channel where the packet is to be re-transmitted.
-#
-#	aliases		is a pattern for digipeating ONCE.  Anything matching
-#			this pattern is effectively treated like WIDE1-1.
-#			'MYCALL' for the receiving channel is an implied
-#			member of this list.
-#
-#	wide		is the pattern for normal WIDEn-N digipeating
-#			where the ssid is decremented. 
-#
-#	preemptive	is the "preemptive" digipeating option.  See
-#			User Guide for more details.
-#
-# Pattern matching uses "extended regular expressions."  Rather than listing 
-# all the different possibilities (such as "WIDE3-3,WIDE4-4,WIDE5-5,WIDE6-6,WIDE7-7"),
-# a pattern can be specified such as "^WIDE[34567]-[1-7]$".  This means:
-#
-#	^	beginning of call.  Without this, leading characters 
-#		don't need to match and ZWIDE3-3 would end up matching.
-#
-#	WIDE	is an exact literal match of upper case letters W I D E.
-#
-#	[34567]	means ANY ONE of the characters listed.
-#
-#	-	is an exact literal match of the "-" character (when not
-#		found inside of []).
-#
-# 	[1-7]	is an alternative form where we have a range of characters
-#		rather than listing them all individually.
-#
-#	$	means end of call.  Without this, trailing characters don't
-#		need to match.  As an example, we would end up matching 
-#		WIDE3-15 besides WIDE3-1.
-#
-# Google "Extended Regular Expressions" for more information.
-#
-
-#
-# If the first unused digipeater field, in the received packet,
-# matches the first pattern, it is treated the same way you
-# would expect WIDE1-1 to behave.
-#
-# The digipeater name is replaced by MYCALL of the destination channel.
-#
-# Example:	W1ABC>APRS,WIDE7-7
-# Becomes:	W1ABC>APRS,WB2OSZ-5*
-#
-# In this example, we trap large values of N as recommended in 
-# http://www.aprs.org/fix14439.html
-#
-
-#
-# If not caught by the first pattern, see if it matches the second pattern.
-#
-# Matches will be processed with the usual WIDEn-N rules.
-# 
-# If N >= 2, the N value is decremented and MYCALL (of the destination
-# 		channel) is inserted if enough room.
-#
-# Example:	W1ABC>APRS,WIDE2-2
-# Becomes:	W1ABC>APRS,WB2OSZ-5*,WIDE2-1
-#
-# If N = 1, we don't want to keep WIDEn-0 in the digipeater list so
-#		the station is replaced by MYCALL.
-#
-# Example:	W1ABC>APRS,W9XYZ*,WIDE2-1
-# Becomes:	W1ABC>APRS,W9XYZ,WB2OSZ-5*
-#
-
-#-------------------------------------------------------
-# ----------  Example 1:  Typical digipeater  ----------
-#-------------------------------------------------------
-
-#
 # For most common situations, use something like this by removing
-# the "#" from the beginning of the line.
-# To disable digipeating, put # at the beginning of the line.
-# 
+# the "#" from the beginning of the line below.
+#
 
-# DIGIPEAT 0 0 ^WIDE[3-7]-[1-7]$|^TEST$ ^WIDE[12]-[12]$ TRACE
+#DIGIPEAT 0 0 ^WIDE[3-7]-[1-7]$|^TEST$ ^WIDE[12]-[12]$ TRACE
 
-
-
+# See User Guide for more explanation of what this means and how
+# it can be customized for your particular needs.
+ 
 
 #############################################################
 #                                                           #
@@ -512,7 +436,7 @@ FIX_BITS 1
 
 #IGFILTER m/50 
 
-# Finally, we don’t want to flood the radio channel.  
+# Finally, we don't want to flood the radio channel.  
 # The IGate function will limit the number of packets transmitted 
 # during 1 minute and 5 minute intervals.   If a limit would 
 # be exceeded, the packet is dropped and message is displayed in red.
@@ -530,7 +454,7 @@ IGTXLIMIT 6 10
 # Dire Wolf can receive DTMF (commonly known as Touch Tone)
 # messages and convert them to packet objects.
 #
-# See "APRStt-Implementation-Notes" document for details.
+# See separate "APRStt-Implementation-Notes" document for details.
 #
 
 #
@@ -571,8 +495,8 @@ TTUTM  B6xxxyyy  19T  10  300000  4720000
 TTCORRAL   37^55.50N  81^7.00W  0^0.02N
 
 # Compact messages - Fixed locations xx and object yyy where 
-#   	Object numbers 100 – 199	= bicycle	
-#	Object numbers 200 – 299	= fire truck
+#   	Object numbers 100 - 199	= bicycle	
+#	Object numbers 200 - 299	= fire truck
 #	Others				= dog
 
 TTMACRO  xx1yy  B9xx*AB166*AA2B4C5B3B0A1yy
