--- a/Makefile.linux
+++ b/Makefile.linux
@@ -2,7 +2,7 @@
 # Makefile for Linux version of Dire Wolf.
 #
 
-all : direwolf decode_aprs text2tt tt2text ll2utm utm2ll aclients
+all : direwolf decode_aprs text2tt tt2text ll2utm utm2ll aclients log2gpx
 
 CC = gcc
 
@@ -81,16 +81,28 @@ CC = gcc
 arch := $(shell echo | gcc -E -dM - | grep __i386__)
 
 ifneq ($(arch),)
-CFLAGS := -DUSE_ALSA -O3 -march=pentium3 -pthread
+# You might see improvement with -march fine tuned to your hardware.
+# Probably should keep pentium3 if you will be redistributing binaries
+# to other people.
+CFLAGS := -O3 -march=pentium3 -pthread -Iutm
 else
-CFLAGS := -DUSE_ALSA -O3 -pthread
+CFLAGS := -O3 -pthread -Iutm
 endif
 
 
-# Uncomment following lines to enable GPS interface.
-# DO NOT USE THIS.  Still needs more work.
+
+# If you want to use OSS (for FreeBSD, OpenBSD) instead of
+# ALSA (for Linux), comment out the two lines below.
+
+CFLAGS += -DUSE_ALSA
+LDLIBS += -lasound
+
+
+# Uncomment following lines to enable GPS interface & tracker function.
+
 #CFLAGS += -DENABLE_GPS
 #LDLIBS += -lgps
+
 
 
 # Name of current directory.
@@ -107,9 +119,9 @@ direwolf : direwolf.o config.o  demod.o dsp.o demod_afsk.o demod_9600.o hdlc_rec
 		decode_aprs.o symbols.o server.o kiss.o kissnet.o kiss_frame.o hdlc_send.o fcs_calc.o \
 		gen_tone.o audio.o digipeater.o dedupe.o tq.o xmit.o \
 		ptt.o beacon.o dwgps.o encode_aprs.o latlong.o encode_aprs.o latlong.o textcolor.o \
-		dtmf.o aprs_tt.o tt_user.o tt_text.o igate.o \
+		dtmf.o aprs_tt.o tt_user.o tt_text.o igate.o nmea.o log.o telemetry.o \
 		utm.a
-	$(CC) $(CFLAGS) -o $@ $^ -lpthread -lrt -lasound $(LDLIBS) -lm
+	$(CC) $(CFLAGS) -o $@ $^ -lpthread -lrt $(LDLIBS) -lm
 
 
 # Optimization for slow processors.
@@ -132,40 +144,51 @@ LatLong-UTMconversion.o : utm/LatLong-UTMconversion.c
 	$(CC) $(CFLAGS) -c -o $@ $^
 
 
-# Optional install step. 
+# Optional installation into /usr/local/...
+# Needs to be run as root or with sudo.
+
 # TODO: Review file locations.
-# TODO: Handle Linux variations correctly.
-# The Raspberry Pi has ~/Desktop but Ubuntu does not.
-# For now, just put reference to it at the end so only last step fails.
 
 install : direwolf decode_aprs tocalls.txt symbols-new.txt symbolsX.txt dw-icon.png direwolf.desktop
-	sudo install direwolf /usr/local/bin
-	sudo install decode_aprs /usr/local/bin
-	sudo install text2tt /usr/local/bin
-	sudo install tt2text /usr/local/bin
-	sudo install ll2utm /usr/local/bin
-	sudo install utm2ll /usr/local/bin
-	sudo install aclients /usr/local/bin
-	sudo install -D --mode=644 tocalls.txt /usr/share/direwolf/tocalls.txt
-	sudo install -D --mode=644 symbols-new.txt /usr/share/direwolf/symbols-new.txt
-	sudo install -D --mode=644 symbolsX.txt /usr/share/direwolf/symbolsX.txt
-	sudo install -D --mode=644 dw-icon.png /usr/share/direwolf/dw-icon.png
-	sudo install -D --mode=644 direwolf.desktop /usr/share/applications/direwolf.desktop
-	cp direwolf.conf ~
+	install direwolf /usr/local/bin
+	install decode_aprs /usr/local/bin
+	install text2tt /usr/local/bin
+	install tt2text /usr/local/bin
+	install ll2utm /usr/local/bin
+	install utm2ll /usr/local/bin
+	install aclients /usr/local/bin
+	install log2gpx /usr/local/bin
+	install -D --mode=644 tocalls.txt /usr/share/direwolf/tocalls.txt
+	install -D --mode=644 symbols-new.txt /usr/share/direwolf/symbols-new.txt
+	install -D --mode=644 symbolsX.txt /usr/share/direwolf/symbolsX.txt
+	install -D --mode=644 dw-icon.png /usr/share/direwolf/dw-icon.png
+	install -D --mode=644 direwolf.desktop /usr/share/applications/direwolf.desktop
+	install -D --mode=644 CHANGES.txt /usr/local/share/doc/direwolf/CHANGES.txt
+	install -D --mode=644 LICENSE-dire-wolf.txt /usr/local/share/doc/direwolf/LICENSE-dire-wolf.txt
+	install -D --mode=644 LICENSE-other.txt /usr/local/share/doc/direwolf/LICENSE-other.txt
+	install -D --mode=644 User-Guide.pdf /usr/local/share/doc/direwolf/User-Guide.pdf
+	install -D --mode=644 Raspberry-Pi-APRS.pdf /usr/local/share/doc/direwolf/Raspberry-Pi-APRS.pdf
+	install -D --mode=644 Raspberry-Pi-APRS-Tracker.pdf /usr/local/share/doc/direwolf/Raspberry-Pi-APRS-Tracker.pdf
+	install -D --mode=644 APRStt-Implementation-Notes.pdf /usr/local/share/doc/direwolf/APRStt-Implementation-Notes.pdf
+	install -D --mode=644 Quick-Start-Guide-Windows.pdf /usr/local/share/doc/direwolf/Quick-Start-Guide-Windows.pdf
+
+
+# The Raspberry Pi has ~/Desktop but Ubuntu does not.
+
+# TODO: Handle Linux variations correctly.
+
+
+install-rpi : dw-start.sh
 	cp dw-start.sh ~
-	sudo install -D --mode=644 CHANGES.txt /usr/local/share/doc/direwolf/CHANGES.txt
-	sudo install -D --mode=644 LICENSE-dire-wolf.txt /usr/local/share/doc/direwolf/LICENSE-dire-wolf.txt
-	sudo install -D --mode=644 LICENSE-other.txt /usr/local/share/doc/direwolf/LICENSE-other.txt
-	sudo install -D --mode=644 User-Guide.pdf /usr/local/share/doc/direwolf/User-Guide.pdf
-	sudo install -D --mode=644 Raspberry-Pi-APRS.pdf /usr/local/share/doc/direwolf/Raspberry-Pi-APRS.pdf
-	sudo install -D --mode=644 APRStt-Implementation-Notes.pdf /usr/local/share/doc/direwolf/APRStt-Implementation-Notes.pdf
-	sudo install -D --mode=644 Quick-Start-Guide-Windows.pdf /usr/local/share/doc/direwolf/Quick-Start-Guide-Windows.pdf
 	ln -f -s /usr/share/applications/direwolf.desktop ~/Desktop/direwolf.desktop
+
+install-conf : direwolf.conf
+	cp direwolf.conf ~
 
 
 # Separate application to decode raw data.
 
-decode_aprs : decode_aprs.c symbols.c ax25_pad.c textcolor.c fcs_calc.c
+decode_aprs : decode_aprs.c symbols.c ax25_pad.c textcolor.c fcs_calc.c latlong.c log.c telemetry.o
 	$(CC) $(CFLAGS) -o decode_aprs -DTEST $^ -lm
 
 
@@ -182,23 +205,29 @@ tt2text : tt_text.c
 # Convert between Latitude/Longitude and UTM coordinates.
 
 ll2utm : ll2utm.c utm.a
-	$(CC) $(CFLAGS) -I utm -o $@ $^ -lm
+	$(CC) $(CFLAGS) -o $@ $^ -lm
 
 utm2ll : utm2ll.c utm.a
-	$(CC) $(CFLAGS) -I utm -o $@ $^ -lm
+	$(CC) $(CFLAGS) -o $@ $^ -lm
 
+
+# Convert from log file to GPX.
+
+log2gpx : log2gpx.c 
+	$(CC) $(CFLAGS) -o $@ $^ -lm
 
 
 # Test application to generate sound.
 
 gen_packets : gen_packets.c ax25_pad.c hdlc_send.c fcs_calc.c gen_tone.c textcolor.c 
-	$(CC) $(CFLAGS) -o $@ $^ -lasound -lm
+	$(CC) $(CFLAGS) -o $@ $^ $(LDLIBS) -lm
 
 demod.o : tune.h
 demod_afsk.o : tune.h
 demod_9600.o : tune.h
 
-testagc : atest.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c hdlc_rec2.o multi_modem.o rrbb.o fcs_calc.c ax25_pad.c decode_aprs.c symbols.c tune.h textcolor.c
+testagc : atest.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c hdlc_rec2.o multi_modem.o rrbb.o \
+		fcs_calc.c ax25_pad.c decode_aprs.c telemetry.c latlong.c symbols.c tune.h textcolor.c
 	$(CC) $(CFLAGS) -o atest $^ -lm
 	./atest 02_Track_2.wav | grep "packets decoded in" > atest.out
 
@@ -206,8 +235,9 @@ testagc : atest.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c hdlc_rec2.o
 # Unit test for AFSK demodulator
 
 
-atest : atest.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c hdlc_rec2.o multi_modem.o rrbb.o fcs_calc.c ax25_pad.c decode_aprs.c symbols.c textcolor.c
-	$(CC) $(CFLAGS) -o $@ $^ -lm
+atest : atest.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c hdlc_rec2.o multi_modem.o rrbb.o \
+		fcs_calc.c ax25_pad.c decode_aprs.c telemetry.c latlong.c symbols.c textcolor.c
+	$(CC) $(CFLAGS) -o $@ $^ -lm -lrt
 	time ./atest ../direwolf-0.2/02_Track_2.wav 
 
 # Unit test for inner digipeater algorithm
@@ -233,6 +263,14 @@ udptest : udp_test.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c hdlc_rec
 	./udptest
 
 
+# Unit test for telemetry decoding.
+
+
+etest : telemetry.c ax25_pad.c fcs_calc.c textcolor.c misc.a regex.a
+	$(CC) $(CFLAGS) -o $@ $^ -lm -lrt
+	./etest
+	
+
 # Multiple AGWPE network or serial port clients to test TNCs side by side.
 
 aclients : aclients.c ax25_pad.c fcs_calc.c textcolor.c
@@ -241,7 +279,7 @@ aclients : aclients.c ax25_pad.c fcs_calc.c textcolor.c
 
 SRCS = direwolf.c demod.c dsp.c demod_afsk.c demod_9600.c hdlc_rec.c multi_modem.c fcs_calc.c ax25_pad.c decode_aprs.c symbols.c \
 		server.c kiss.c kissnet.c kiss_frame.c hdlc_send.c fcs_calc.c gen_tone.c audio.c \
-		digipeater.c dedupe.c tq.c xmit.c beacon.c encode_aprs.c latlong.c encode_aprs.c latlong.c
+		digipeater.c dedupe.c tq.c xmit.c beacon.c encode_aprs.c latlong.c encode_aprs.c latlong.c telemetry.c log.c
 
 
 depend : $(SRCS)
@@ -256,12 +294,12 @@ clean :
 # Package it up for distribution.
 
 dist-src : CHANGES.txt  User-Guide.pdf Quick-Start-Guide-Windows.pdf Raspberry-Pi-APRS.pdf \
-		direwolf.desktop dw-start.sh 
+		Raspberry-Pi-APRS-Tracker.pdf direwolf.desktop dw-start.sh 
 	rm -f fsk_fast_filter.h
 	echo " " > tune.h
 	rm -f ../$z-src.zip
 	(cd .. ; zip $z-src.zip $z/CHANGES.txt $z/LICENSE* \
-		$z/User-Guide.pdf $z/Quick-Start-Guide-Windows.pdf $z/Raspberry-Pi-APRS.pdf \
+		$z/User-Guide.pdf $z/Quick-Start-Guide-Windows.pdf $z/Raspberry-Pi-APRS.pdf Raspberry-Pi-APRS-Tracker.pdf \
 		$z/Makefile* $z/*.c $z/*.h $z/regex/* $z/misc/* $z/utm/* \
 		$z/*.conf $z/tocalls.txt $z/symbols-new.txt $z/symbolsX.txt \
 		$z/dw-icon.png $z/dw-icon.rc $z/dw-icon.ico \
@@ -277,10 +315,24 @@ dist-src : CHANGES.txt  User-Guide.pdf Quick-Start-Guide-Windows.pdf Raspberry-P
 #Raspberry-Pi-APRS.pdf : Raspberry-Pi-APRS.docx
 #	echo "***** Raspberry-Pi-APRS.pdf is out of date *****" 
 
+#Raspberry-Pi-APRS-Tracker.pdf : Raspberry-Pi-APRS-Tracker.docx
+#	echo "***** Raspberry-Pi-APRS-Tracker.pdf is out of date *****" 
+
 
 backup :
 	mkdir /cygdrive/e/backup-cygwin-home/`date +"%Y-%m-%d"`
 	cp -r . /cygdrive/e/backup-cygwin-home/`date +"%Y-%m-%d"`
+
+#
+# The locations below appear to be the most recent.
+# The copy at http://www.aprs.org/tocalls.txt is out of date.
+#
+
+tocalls-symbols :
+	wget http://www.aprs.org/aprs11/tocalls.txt -O tocalls.txt
+	wget http://www.aprs.org/symbols/symbols-new.txt -O symbols-new.txt
+	wget http://www.aprs.org/symbols/symbolsX.txt -O symbolsX.txt
+
 
 #
 # The following is updated by "make depend"
