Don't install the changelog twice

--- a/debian/patches/makefile_install.patch
+++ b/debian/patches/makefile_install.patch
@@ -53,7 +53,7 @@ Last-Update: 2014-09-08
 +	install -D --mode=644 symbolsX.txt debian/direwolf/usr/share/direwolf/symbolsX.txt
 +	install -D --mode=644 dw-icon.png debian/direwolf/usr/share/direwolf/dw-icon.png
 +	install -D --mode=644 direwolf.desktop debian/direwolf/usr/share/applications/direwolf.desktop
-+	install -D --mode=644 CHANGES.txt debian/direwolf/usr/share/doc/direwolf/CHANGES.txt
++	#install -D --mode=644 CHANGES.txt debian/direwolf/usr/share/doc/direwolf/CHANGES.txt
 +	install -D --mode=644 LICENSE-dire-wolf.txt debian/direwolf/usr/share/doc/direwolf/LICENSE-dire-wolf.txt
 +	install -D --mode=644 LICENSE-other.txt debian/direwolf/usr/share/doc/direwolf/LICENSE-other.txt
 +	install -D --mode=644 User-Guide.pdf debian/direwolf-docs/usr/share/doc/direwolf/User-Guide.pdf
