--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,8 @@ Package: direwolf
 Architecture: alpha amd64 arm64 armel armhf i386 mipsel ppc64el sh4 x32
 Depends: ${shlibs:Depends}, ${misc:Depends}, direwolf-docs
 Suggests: gpsd
+Breaks: direwolf-docs (<< 1.1-1)
+Replaces: direwolf-docs (<< 1.1-1)
 Description: Soundcard TNC for APRS
  Dire Wolf is a software "soundcard" modem/TNC and APRS encoder/decoder. It can
  be used stand-alone to receive APRS messages, as a digipeater, APRStt gateway,
@@ -24,6 +26,8 @@ Package: direwolf-docs
 Architecture: all
 Section: doc
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Breaks: direwolf (<< 1.1-1)
+Replaces: direwolf (<< 1.1-1)
 Description: Soundcard TNC for APRS - Documentation
  Dire Wolf is a software "soundcard" modem/TNC and APRS encoder/decoder. It can
  be used stand-alone to receive APRS messages, as a digipeater, APRStt gateway,
