--- a/debian/rules
+++ b/debian/rules
@@ -7,9 +7,8 @@ override_dh_auto_build:
 	make -f Makefile.linux
 
 override_dh_auto_install:
-	make -f Makefile.linux install
+	@echo "Skipping the install to /usr/local"
 
 override_dh_auto_clean:
 	make -f Makefile.linux clean
-	-rm aclients gen_fff
 
