--- a/debian/rules
+++ b/debian/rules
@@ -12,7 +12,7 @@ override_dh_auto_install:
 override_dh_auto_clean:
 	make -f Makefile.linux clean
 
-override_dh_fixperms:
+override_dh_fixperms-arch:
 	dh_fixperms
 	chmod 644 debian/direwolf/usr/share/direwolf/dw-icon.png
 
