--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Section: hamradio
 Priority: optional
 Build-Depends: debhelper (>= 9),
                libasound2-dev,
-               libgps-dev
+               libgps-dev,
+	       dh-systemd
 Standards-Version: 3.9.8
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-hamradio/direwolf.git/
 Vcs-Git: https://anonscm.debian.org/git/pkg-hamradio/direwolf.git
