--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
-	dh $@
+	dh $@ --with=systemd
 
 override_dh_auto_build:
 	make -f Makefile.linux
@@ -19,4 +19,6 @@ override_dh_auto_clean:
 override_dh_fixperms-arch:
 	dh_fixperms
 	chmod 644 debian/direwolf/usr/share/direwolf/dw-icon.png
-
+override_dh_systemd_enable:
+	dh_systemd_enable \
+		--no-enable
