--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,8 @@ Priority: optional
 Build-Depends: debhelper (>= 9),
                libasound2-dev,
                libgps-dev,
-	       dh-systemd
+	       dh-systemd,
+               adduser
 Standards-Version: 4.1.0
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-hamradio/direwolf.git/
 Vcs-Git: https://anonscm.debian.org/git/pkg-hamradio/direwolf.git
