--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends: debhelper (>= 9),
                libgps-dev,
                adduser
 Standards-Version: 4.1.0
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-hamradio/direwolf.git/
-Vcs-Git: https://anonscm.debian.org/git/pkg-hamradio/direwolf.git
+Vcs-Browser: https://salsa.debian.org/debian-hamradio-team/direwolf
+Vcs-Git: https://salsa.debian.org/debian-hamradio-team/direwolf.git
 Homepage: https://github.com/wb2osz/direwolf
 
 Package: direwolf
